--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,33 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 .header{
     display: flex;
-    padding: 5px 3px 0px;
+    padding: 3px 3px 0px;
     border-top: 3px solid red;
     box-shadow: 0px 1px 2px 0px rgba(17, 17, 17, 0.116);
     background: #F8F9F9;
     position: fixed;
     width: 100%;
     z-index: 10;
+    border-bottom: 1px solid #00000018;
 }
 .header img{
-    height: 30px;
-    padding-left: 30px;
+    height: 29px;
+    padding: 4px 0px 4px 45px;
 }
 .header-left{
   display: flex;
-  padding: 0px 10px;
 }
 .header-left button{
     height: 34px;
     border-radius: 20px;
-    margin: 0px 17px 5px 18px;
+    margin: 5px 15px 4px 18px;
     border: 0px black;
-    padding: 10px;
-    color: gray;
+    padding: 10px 10px 8px 10px;
+    color: #7a7a7a;
     background: #F8F9F9;
 }
 .header-left button:hover{
@@ -35,23 +35,24 @@
 
 }
 .header-middle input:focus{
-    outline: none;
-      
+    outline: none;    
 }
 .header-middle{
     width: 80%;
     display: flex;
-    padding: 1px 0px 10px 0px;
+    padding: 3px 0px 6px 0px;
+    max-width: 781px;
+    opacity: .8;
 }
 .header-middle input{
     opacity: .6;
-    padding: 6px;
+    padding: 4px;
     font-size: 16px;
-    padding-left: 40px; 
+    padding-left: 35px;
   }
   .header-middle img{
     position: absolute;
-    top: 14px;
+    top: 8px;
     padding-left: 10px;
     height: 20px;
     width: 20px;
@@ -78,16 +79,15 @@
  }
  .header-user{
     display: inline-flex;
-    margin-top: 5px;
     font-size: 13px;
  }
  .header-user span{
-    display: inline-flex; 
-    padding: 4px;
+    display: inline-flex;
+    padding: 6px;
     padding-left: 0px;
  }
 .header-user img{
-    width: 20px;
+    width: 24px;
     padding-top: 6px;
     border-radius: 10px;
     opacity: 1;
@@ -95,7 +95,7 @@
 .side-bar{
     padding: 20px 0px 144px;
     padding-left: 44px;
-    color: #8d949c;
+    color:#7a7a7a;
     font-size: smaller;
     border-right: 1px solid  rgba(17, 17, 17, 0.116);
     position: sticky;
@@ -109,7 +109,7 @@
     line-height: 34px;
 }
 .side-bar li:hover{
-    color: #505050;
+    color: rgb(2, 2, 2);
 }
 .sb1 img{
     vertical-align: middle;
@@ -119,7 +119,7 @@
     padding-left: 25px;
 }
 #user{
-    font-weight: 600;
+    font-weight: 750;
     color: black;
     border-right: 3px solid #F48024;
     background: #F8F9F9;
@@ -144,19 +144,26 @@
     padding-left: 90px;
 }
 #earth-icon{
-    opacity: .5;
+    font-size: 20px;
+    vertical-align: middle;
+}
+#earth-icon:hover{
+    opacity: 1;
 }
 span.badge3 ,
 span.badgecount{
     color: #DA6880;
 }
+.mc-1{
+    padding: 2px 10px;
+}
 .mc-1 img{
     width: 128px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .main-content{
     padding: 10px 10px;
     width: 80%;
+    max-width: 1100px;
 }
 .mc-1,.mc-2,.mc-3{
     display: inline-flex;
@@ -168,6 +175,8 @@ span.badgecount{
 .ic-2 img{
     width: 18px;
     opacity: .6;
+    vertical-align: middle;
+    cursor: pointer;
 }
 .image-content{
     padding: 10px;
@@ -182,11 +191,11 @@ span.badgecount{
     padding: 5px 0px;
 }
 .ic-1 span,.ic-2 span{
-    color: #8d949c;
+    color: #9199A1;
 }
 .ic-2 a{
     text-decoration: none;
-    color: #8d949c;
+    color: #9199A1;
 }
 .ic-1 span.material-icons{
     font-size: 18px;
@@ -195,30 +204,27 @@ span.badgecount{
 }
 .button-icon{
     position: absolute;
-    right: 35px;
-    border-color:1px #8d949c; 
+    left: 1200px; 
 }
 .btn{
-    color:#8d949c;
+    color:#7a7a7a;
     padding: 2px 2px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 13px;
-    margin: 0;
     cursor: pointer;
 }
 #expand-icon{
     vertical-align: middle;
 }
-
 .profile button{
     border: none;
     padding: 6px 12px 6px 12px;
     border-radius: 15px;
     color: #fff;
     background: #F48024;
-    
+    cursor: pointer;
 }
 .profile button:hover{
     background-color: #DA680B;
@@ -228,8 +234,8 @@ span.badgecount{
     padding: 8px 15px 8px 15px;
     border-radius: 15px;
     background: #fff;
-    color: #8d949c;
-    
+    color:#7a7a7a;
+    cursor: pointer; 
 }
 .activity-btn{
     padding-left: 10px;
@@ -251,6 +257,12 @@ span.badgecount{
 .net-left span
 {
     font-size: 20px;
+}
+.cm2-title a{
+    float: right;
+    font-size: 14px;
+    text-decoration: none;
+    color: #505050;
 }
 .content-row{
     display:flex ;
@@ -300,12 +312,13 @@ span.badgecount{
 .collective-info{
     display:block;
     font-family: Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
-    font-size: 14px; 
+    font-size: 16px; 
     padding: inherit;
+    cursor: pointer;
 }
 #collective-emp{
     display: block;
-    font-size: 10px;
+    font-size: 12px;
 }
 #icon-view{
     margin-left: 50px;
@@ -331,11 +344,11 @@ span.badgecount{
 }
 .communities-content a{
     text-decoration: none;
-    color: #8d949c;
+    color: #7d7dff;
     font-size: 13px;
 }
 .communities-content a:hover{
-    color:#717072;
+    color:#4040ff;
 }
 .communities-content span{
     font-size: 13px;
@@ -370,6 +383,12 @@ ol.list{
     padding: 10px 30px;
     line-height: 30px;
 }
+.sites-list a,.discription a{
+    color: #7d7dff;
+}
+.sites-list a:hover,.discription a:hover{
+    color: #4040ff;
+}
 .sites-list span{
     font-size: 14px;
 }
@@ -385,7 +404,7 @@ ol.list{
     padding:10px;
     border: 1px solid  rgba(17, 17, 17, 0.116);
     display: inline-block;
-    margin-left: 20px;
+    margin: 12px;
 }
 .cm2{
     padding: 50px 0px 0px;
@@ -409,9 +428,10 @@ span.dot-icon-b {
     color:#CD7F32;
 }
 .cc-c1{
-    font-size: 11px;
-    padding: 2px 10px;
     color:#505050;
+    line-height: 10px;
+    font-size: 11px;
+    padding: 3px 10px;
 }
 
 .cc-c2{
@@ -419,20 +439,19 @@ span.dot-icon-b {
     border: 1px solid  rgba(17, 17, 17, 0.116);
     display: inline-block;
 }
-.cc-c2:hover,.cc-c3:hover{
+.cc-c2:hover{
     background: #d8d8d8;
 }
 .cc-c3{
     padding: 5px;
-    border: 1px solid  rgba(17, 17, 17, 0.116);
-    margin-left: 20px;
+    margin-left: 40px;
     float: right;
 }
 .img-content p{
     font-size: 12px;
 }
 .cm2-title{
-    padding: 10px;
+    padding:3px 10px 0px;
 }
 .tag-title a{
     float: right;
@@ -464,13 +483,14 @@ span.dot-icon-b {
     border: 1px solid  rgba(17, 17, 17, 0.116);
 }
 .tag-rows a{
-    background: #7d7dff2f;
+    background:#e7f3ff;
+    color: #0074cc;
     padding: 5px;
     font-size: 12px;
     text-decoration: none;
 }
 .tag-rows a:hover{
-    background: hwb(240 25% 0% / 0.274);
+    background: #a1a1f86b;
 }
 .post-left{
     display: inline-block;
@@ -547,7 +567,7 @@ span.dot-icon-b {
     text-decoration: none;
 }
 .pr-left a:hover{
-    color: hwb(240 25% 0%);
+    color: #4040ff;
 }
 .pr-left span{
     background: #6ab96a;
@@ -581,7 +601,7 @@ span.dot-icon-b {
     color: #7d7dff;
 }
 .meta-left a:hover{
-    color: hwb(240 25% 0%);
+    color: #4040ff;
 }
 .meta-left span{
     color: #505050;
@@ -625,7 +645,7 @@ span.dot-icon-b {
 }
 .network-left a:hover{
     font-size: 15px;
-    color: hwb(240 25% 0%);
+    color: #4040ff;
 }
 .network-left span{
     color: #505050;
@@ -646,45 +666,129 @@ span.dot-icon-b {
 }
 /* footer */
 #footer-content{
-    width: 100%;
     background-color:#242729;
     position: absolute;
     color: #c4c3d1; 
     display: flex;
     font-family:Georgia, 'Times New Roman', Times, serif; 
+    padding: 0px 84px 10px 0px;
 }
 footer{
     padding: 10px;
 }
 .footer-bar{
-    display: flex; 
-    padding: 30px;
+    display: flex;
+    padding: 13px;
 }
 .footer-bar img{
-    width: 40px;
-    padding: 0px 20px;
+    width: 55px;
 }
-.col{
-    padding: 0px 40px;
+.col-1{
+    padding: 0px 8px 0px 35px;
 }
-.col li{
+.col-1 li{
     list-style-type: none;
     line-height: 30px;
-}
-.main{
-    font-size: 15px;
 }
 .row{
     font-size: 12px;
     color: #8a898f;
 }
-
-.col a{
+.col-1 a{
     text-decoration: none;
     color: #8a898f;
-    font-size: 11px;
+    font-size: 13px;
     padding-left: 10px;
 }
-.col a:hover{
+.col-1 a:hover{
+    color:#717072 ;
+}
+.footer-bar .main-f a{
+   font-size: 12px;
+   font-weight: 700;
+   color:#bdbdbd;
+}
+.col-2 a{
+    text-decoration: none;
+ color: #8a898f;
+ font-size: 13px;
+ padding-left: 10px;
+}
+.col-2 a:hover{
+     color:#717072 ;
+}
+.col-2{
+    padding-top: 10px;
+}
+.col-2 li{
+    list-style-type: none;
+    line-height: 30px;
+}
+.col-3 a{
+    text-decoration: none;
+    color: #8a898f;
+    font-size: 13px;
+    padding-left: 10px;
+}
+.col-3{
+    padding-top: 10px;
+    padding-left: 80px;
+}
+.col-3 li{
+    list-style-type: none;
+    line-height: 30px;
+}
+.col-3 a:hover{
+    color:#717072 ;
+}
+.col-4 a{
+    text-decoration: none;
+    color: #8a898f;
+    font-size: 13px;
+    padding-left: 10px;
+}
+.col-4{
+    padding-top: 10px;
+    padding-left: 80px;
+}
+.col-4 li{
+    list-style-type: none;
+    line-height: 30px;
+}
+.col-4 a:hover{
+    color:#717072 ;
+}
+.col-5 a{
+    text-decoration: none;
+    color: #8a898f;
+    font-size: 13px;
+    padding-left: 10px;
+}
+.col-5{
+    padding-top: 10px;
+    padding-left: 80px;
+}
+.col-5 li{
+    list-style-type: none;
+    line-height: 30px;
+}
+.col-5 a:hover{
+    color:#717072 ;
+}
+.col-6 a{
+    text-decoration: none;
+    color: #8a898f;
+    font-size: 13px;
+    padding-left: 10px;
+}
+.col-6{
+    padding-top: 10px;
+    padding-left: 110px;
+}
+.col-6 li{
+    list-style-type: none;
+    line-height: 30px;
+}
+.col-6 a:hover{
     color:#717072 ;
 }
