--- a/css/style.css
+++ b/css/style.css
@@ -44,10 +44,11 @@
      opacity: .8;
 }
  .header-middle input{
-     opacity: .6;
      padding: 4px;
-     font-size: 16px;
+     opacity: .7;
+     font-size: 12px;
      padding-left: 35px;
+     color: #848484;
 }
  .header-middle img{
      position: absolute;
@@ -205,7 +206,7 @@
 }
  .button-icon{
      position: absolute;
-     left: 1200px;
+     right:70px;
 }
  .btn{
      color:#7a7a7a;
@@ -499,7 +500,7 @@
  .box1{
      display: inline-flex;
 }
-.box2{
+ .box2{
      display: inline-flex;
      padding: 0px 10px;
 }
@@ -606,7 +607,7 @@
      padding: 10px 10px;
      text-decoration: none;
 }
-.meta-left{
+ .meta-left{
      display: inline-flex;
 }
  .net-left{
@@ -651,7 +652,7 @@
      padding: 10px 10px;
      text-decoration: none;
 }
-.network-left{
+ .network-left{
      display: inline-flex;
 }
  .network-row{
@@ -785,3 +786,4 @@
  .col-6 a:hover{
      color:#717072 ;
 }
+ 
