--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,68 @@
      padding: 0;
      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
+ul ,li{
+     list-style-type: none;
+}
+a{
+     text-decoration: none;
+}
+.dflex{
+     display:flex;
+}
+.dinf{
+	display:inline-flex;
+}
+.dblock{
+    display: block;
+}
+.darkColorgray{
+	color:#505050;
+}
+.darkColorgraylighter{
+	color: #9199A1;
+}
+.bluehover{
+    color: #0074cc;
+}
+.bluehover:hover{
+    color: #0091ff;
+}
+ span.dot-icon {
+     color: #FFD700;
+     flex:1;
+}
+ span.dot-icon-g {
+     color: #FFD700;
+}
+ span.dot-icon-s {
+     color: #C0C0C0;
+}
+ span.dot-icon-b {
+     color:#CD7F32;
+}
+.jc{
+    justify-content: space-between;
+}
+.pr{
+    position: relative;
+}
+.clear{
+ 	clear:both;
+}
+ .fs20{
+     font-size: 20px;
+}
+.tdu{
+    text-decoration: underline;
+}
+.fontSmaller{
+     font-size: 14px;
+}
+.boxShadowpro{
+     box-shadow: 0 3px 6px rgb(0 0 0 / 10%), 0 3px 6px rgb(0 0 0 / 2%);
+}
  .header{
-     display: flex;
      padding: 3px 3px 0px;
      border-top: 3px solid red;
      box-shadow: 0px 1px 2px 0px rgba(17, 17, 17, 0.116);
@@ -18,73 +78,62 @@
      height: 29px;
      padding: 4px 0px 4px 45px;
 }
- .header-left{
-     display: flex;
-}
- .header-left button{
+ .headerLeft button{
      height: 34px;
      border-radius: 20px;
      margin: 5px 15px 4px 18px;
      border: 0px black;
-     padding: 10px 10px 8px 10px;
+     padding: 8px;
      color: #7a7a7a;
-     background: #F8F9F9;
 }
- .header-left button:hover{
+ .headerLeft button:hover{
      background: #E3E6E8;
 }
- .header-middle input:focus{
+ .headerMiddle input:focus{
      outline: none;
 }
- .header-middle{
+ .headerMiddle{
      width: 80%;
-     display: flex;
      padding: 3px 0px 6px 0px;
-     max-width: 781px;
-     opacity: .8;
 }
- .header-middle input{
-     padding: 4px;
-     opacity: .7;
+ .headerMiddle input{
+     border-radius: 3px;
+     padding: 4px 4px 4px 35px;
      font-size: 12px;
-     padding-left: 35px;
      color: #848484;
+     border: 1px solid #c5c5c5;
 }
- .header-middle img{
+ .headerMiddle img{
      position: absolute;
-     top: 8px;
+     top: 6px;
      padding-left: 10px;
      height: 20px;
      width: 20px;
+     opacity: .5;
 }
  input:focus {
      outline: none !important;
      border-color: #719ECE;
      box-shadow: 0 0 10px #719ECE;
 }
- .header-right img{
+ .headerRight img{
      padding: 10px;
-     display: inline-flex;
      height: fit-content;
      align-items: center;
      width: 18px;
      opacity: .6;
 }
- .header-right{
-     display: flex;
+ .headerRight{
      margin-right: 30px;
 }
  .form-control{
      width: 100%;
 }
- .header-user{
-     display: inline-flex;
+ .headerUser{
      font-size: 13px;
 }
- .header-user span{
-     display: inline-flex;
-     padding: 6px;
-     padding-left: 0px;
+ .headerUser span{
+     padding: 6px 6px 6px 0px;
 }
  .header-user img{
      width: 24px;
@@ -92,9 +141,8 @@
      border-radius: 10px;
      opacity: 1;
 }
- .side-bar{
-     padding: 20px 0px 144px;
-     padding-left: 44px;
+ .sideBar{
+     padding: 20px 0px 144px 44px;
      color:#7a7a7a;
      font-size: 13px;
      border-right: 1px solid rgba(17, 17, 17, 0.116);
@@ -103,15 +151,14 @@
      width: 168px;
      height: 540px;
 }
- .side-bar li{
-     list-style-type: none;
+ .sideBar li{
      vertical-align: middle;
      line-height: 34px;
 }
  .sb1 li:nth-child(2) {
      font-size: 11px;
 }
- .side-bar li:hover{
+ .sideBar li:hover{
      color: rgb(2, 2, 2);
 }
  .sb1 img{
@@ -125,25 +172,25 @@
      font-weight: 750;
      color: black;
      border-right: 3px solid #F48024;
-     background: #F8F9F9;
+     background: #f1f2f3;
 }
- .icon-info{
-     width: 15px;
-     padding-left: 50px;
-     opacity: .6;
+ .iconInfo{
+    margin: 8px;
+    width: 15px;
+    height: 15px;
+    opacity: .6;
 }
- .icon-star{
+ .iconStar{
      width: 15px;
      padding: 0px 10px 0px 0px;
 }
  .sb2,.sb3{
      padding-top: 10px;
 }
- .main-body{
-     padding-top: 60px;
-     display: flex;
+ .mainBody{
+     padding-top: 50px;
 }
- .sb3 #icon-info{
+ .sb3 #iconInfo{
      padding-left: 90px;
 }
  #earth-icon{
@@ -153,21 +200,17 @@
  #earth-icon:hover{
      opacity: 1;
 }
- span.badge3 , span.badgecount{
-     color: #DA6880;
-}
  .mc-1{
      padding: 2px 10px;
 }
  .mc-1 img{
      width: 128px;
 }
- .main-content{
+ .mainContent{
      padding: 10px 10px;
      width: 80%;
-     max-width: 1100px;
 }
- .mc-1,.mc-2,.mc-3{
+.dif{
      display: inline-flex;
      width: 100%;
 }
@@ -181,23 +224,14 @@
      cursor: pointer;
 }
  .image-content{
-     padding: 10px;
-     padding-top: 20px;
+     padding: 20px 10px 10px 10px ;
 }
  .image-content p{
      font-size: 35px;
      font-family: Arial, Helvetica, sans-serif;
 }
- .ic-1,.ic-2{
-     font-size: 14px;
+ .ic-fp{
      padding: 5px 0px;
-}
- .ic-1 span,.ic-2 span{
-     color: #9199A1;
-}
- .ic-2 a{
-     text-decoration: none;
-     color: #9199A1;
 }
  .ic-1 span.material-icons{
      font-size: 18px;
@@ -208,12 +242,14 @@
      position: absolute;
      right:70px;
 }
+.btn-default{
+    background: white;
+    border: 1px solid #7a7a7a;
+    padding: 4px;
+}
  .btn{
      color:#7a7a7a;
-     padding: 2px 2px;
-     text-align: center;
      text-decoration: none;
-     display: inline-block;
      font-size: 13px;
      cursor: pointer;
 }
@@ -248,17 +284,11 @@
  .stats-bar{
      padding: 0px 10px;
 }
- .stats-title span, .about-title span, .collectives-title span, .communities-title span, .cm2-title span, .tag-title, .meta-title span, .net-left span {
-     font-size: 20px;
-}
  .cm2-title a{
      float: right;
-     font-size: 14px;
-     text-decoration: none;
      color: #505050;
 }
  .content-row{
-     display:flex ;
      line-height: 20px;
 }
  .content-row div{
@@ -269,15 +299,8 @@
  .stats-content div{
      padding: 8px 15px 8px 15px;
 }
- #discription{
-     display: block;
-     font-size: 13px;
-     color: #8d949c;
-}
  .content-full{
-     display:flex ;
      line-height: 20px;
-     width: 100%;
      padding: 15px;
 }
  .achievements img{
@@ -291,7 +314,6 @@
 }
  .collectives-content{
      padding: 10px 10px;
-     display: flex;
      border: 1px solid rgba(17, 17, 17, 0.116);
 }
  .collectives-content img{
@@ -303,10 +325,8 @@
      padding: 8px 0px;
 }
  .collective-info{
-     display:block;
-     font-family: Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
      font-size: 16px;
-     padding: inherit;
+     padding: 10px;
      cursor: pointer;
 }
  #collective-emp{
@@ -330,17 +350,16 @@
  .communities-content{
      padding: 10px 20px 10px;
      border: 1px solid rgba(17, 17, 17, 0.116);
+     border-radius: 5px;
 }
  .communities-content img{
      width: 15px;
 }
  .communities-content a{
-     text-decoration: none;
-     color: #7d7dff;
      font-size: 13px;
 }
  .communities-content a:hover{
-     color:#4040ff;
+     color: #0493ff;
 }
  .communities-content span{
      font-size: 13px;
@@ -358,41 +377,33 @@
  ol.list{
      list-style-type: circle;
 }
+.about-bar{
+      margin-left: 10px;
+}
  .discription{
-     font-size: 14px;
-     color:#505050;
      line-height: 25px;
 }
  .sites-list{
-     color: #505050;
      padding: 20px 0px;
 }
  .list{
      padding: 10px 30px;
      line-height: 36px;
 }
- .sites-list a,.discription a{
-     color: #7d7dff;
-}
- .sites-list a:hover,.discription a:hover{
-     color: #4040ff;
-}
- .sites-list span{
-     font-size: 14px;
-}
  .cc-title2{
-     display: flex;
      padding: 10px;
-     padding-bottom: 0px;
 }
  .cc-title img{
      width: 50px;
 }
  .cc-title{
-     padding:10px;
+     width: 200px;
+    height: 160px;
+    padding: 10px;
      border: 1px solid rgba(17, 17, 17, 0.116);
      display: inline-block;
-     margin: 12px;
+     margin: 5px 12px;
+     border-radius: 6px;
 }
  .cm2{
      padding: 28px 0px 0px;
@@ -400,38 +411,22 @@
  div.img-content{
      padding: 5px 10px;
 }
- .cc-content li{
-     list-style-type: none;
-}
- span.dot-icon {
-     color: #FFD700;
-}
- span.dot-icon-g {
-     color: #FFD700;
-}
- span.dot-icon-s {
-     color: #C0C0C0;
-}
- span.dot-icon-b {
-     color:#CD7F32;
-}
  .cc-c1{
-     color:#505050;
      line-height: 10px;
-     font-size: 11px;
-     padding: 3px 10px;
+     font-size: 11px;	
+     padding: 3px 0px;
 }
  .cc-c2{
-     padding: 5px;
+     padding: 7px;
      border: 1px solid rgba(17, 17, 17, 0.116);
      display: inline-block;
+     border-radius: 5px;
 }
  .cc-c2:hover{
      background: #d8d8d8;
 }
  .cc-c3{
      padding: 5px;
-     margin-left: 40px;
      float: right;
 }
  .img-content p{
@@ -442,19 +437,12 @@
 }
  .tag-title a{
      float: right;
-     font-size: 14px;
-     text-decoration: none;
      color: #505050;
 }
  .tag-title{
      padding: 10px;
 }
- .table-bars{
-     width: 100%;
-}
  .top-data{
-     float: right;
-     display: flex;
      padding: 0px 10px;
 }
  #h1{
@@ -466,15 +454,16 @@
      color: #8a898f;
 }
  .tag-rows{
-     padding: 15px 10px;
-     border: 1px solid rgba(17, 17, 17, 0.116);
+     display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    border: 1px solid rgba(17, 17, 17, 0.116);
 }
  .tag-rows a{
      background:#e7f3ff;
      color: #0074cc;
      padding: 5px;
      font-size: 12px;
-     text-decoration: none;
 }
  .tag-rows a:hover{
      background: #a1a1f86b;
@@ -483,20 +472,13 @@
      display: inline-block;
 }
  .post-right{
-     float: right;
      padding: 5px;
-     display: flex;
 }
  .post-right a{
-     text-decoration: none;
      padding: 5px;
      border: 1px solid rgba(17, 17, 17, 0.23);
 }
- .box1{
-     display: inline-flex;
-}
- .box2{
-     display: inline-flex;
+.box2{
      padding: 0px 10px;
 }
  #title-head{
@@ -504,12 +486,6 @@
 }
  .post-bar{
      padding: 20px 0px 10px;
-}
- .post-left div{
-     font-size: 14px;
-}
- .post-left a{
-     text-decoration: none;
 }
  .post-right a{
      font-size: 11px;
@@ -530,13 +506,6 @@
      width: 30px;
      padding: 5px 10px;
 }
- .pr-left{
-     display: inline-flex;
-}
- .pr-right{
-     display: inline-flex;
-     float: right;
-}
  .pr-left a{
      padding: 10px 10px;
 }
@@ -546,15 +515,9 @@
      color: #8d949c;
 }
  .post-row{
+     display: flex;
      border: 1px solid rgba(17, 17, 17, 0.1);
-}
- .pr-left a{
-     font-size: 15px;
-     color: #7d7dff;
-     text-decoration: none;
-}
- .pr-left a:hover{
-     color: #4040ff;
+     justify-content: space-between;
 }
  .pr-left span{
      background: #6ab96a;
@@ -573,7 +536,6 @@
  .meta-title-right span{
      display: inline-flex;
      vertical-align: super;
-     font-size: 14px;
 }
  .meta-title-right{
      float: right;
@@ -582,10 +544,6 @@
      width:20px;
      height: 20px;
      margin: 15px 10px;
-}
- .meta-left a{
-     font-size: 15px;
-     color: #7d7dff;
 }
  .meta-left a:hover{
      color: #4040ff;
@@ -600,13 +558,6 @@
 }
  .meta-left a{
      padding: 10px 10px;
-     text-decoration: none;
-}
- .meta-left{
-     display: inline-flex;
-}
- .net-left{
-     display: inline-flex;
 }
  .net-right{
      float: right;
@@ -618,7 +569,6 @@
      padding: 10px 0px 10px;
 }
  .net-right a{
-     text-decoration: none;
      font-size: 12px;
      color: #8a898f;
 }
@@ -628,12 +578,7 @@
      padding: 10px !important;
 }
  .network-left a{
-     font-size: 15px;
-     color: #7d7dff;
-}
- .network-left a:hover{
-     font-size: 15px;
-     color: #4040ff;
+     padding: 10px 10px;
 }
  .network-left span{
      color: #505050;
@@ -643,53 +588,38 @@
      font-size: 12px;
      border: 1px solid #00000042;
 }
- .network-left a{
-     padding: 10px 10px;
-     text-decoration: none;
-}
- .network-left{
-     display: inline-flex;
-}
  .network-row{
      border: 1px solid rgba(17, 17, 17, 0.1);
 }
 /* footer */
  #footer-content{
      background-color:#242729;
-     position: absolute;
      color: #c4c3d1;
-     display: flex;
      font-family:Georgia, 'Times New Roman', Times, serif;
-     padding: 0px 84px 10px 0px;
+     padding: 20px 84px 10px 0px;
 }
  footer{
      padding: 10px;
 }
- .footer-bar{
-     display: flex;
-     padding: 13px;
-}
  .footer-bar img{
      width: 55px;
 }
- .col-1{
+ .colu{
      padding: 0px 8px 0px 35px;
 }
- .col-1 li{
-     list-style-type: none;
+ .colu li{
      line-height: 30px;
 }
  .row{
      font-size: 12px;
      color: #8a898f;
 }
- .col-1 a{
-     text-decoration: none;
+ .colu a{
      color: #8a898f;
      font-size: 13px;
      padding-left: 10px;
 }
- .col-1 a:hover{
+ .colu a:hover{
      color:#717072 ;
 }
  .footer-bar .main-f a{
@@ -697,88 +627,20 @@
      font-weight: 700;
      color:#bdbdbd;
 }
- .col-2 a{
-     text-decoration: none;
-     color: #8a898f;
-     font-size: 13px;
-     padding-left: 10px;
+.ml15{
+    margin-left: 15px;
 }
- .col-2 a:hover{
-     color:#717072 ;
+.cp{
+    position: absolute;
+    font-size: 10px;
+    bottom: 50px;
+    color: #8a898f;
+    line-height: 15px;
+    margin-left: 15px;
 }
- .col-2{
-     padding-top: 10px;
+.pr{
+   position:relative;
 }
- .col-2 li{
-     list-style-type: none;
-     line-height: 30px;
-}
- .col-3 a{
-     text-decoration: none;
-     color: #8a898f;
-     font-size: 13px;
-     padding-left: 10px;
-}
- .col-3{
-     padding-top: 10px;
-     padding-left: 80px;
-}
- .col-3 li{
-     list-style-type: none;
-     line-height: 30px;
-}
- .col-3 a:hover{
-     color:#717072 ;
-}
- .col-4 a{
-     text-decoration: none;
-     color: #8a898f;
-     font-size: 13px;
-     padding-left: 10px;
-}
- .col-4{
-     padding-top: 10px;
-     padding-left: 80px;
-}
- .col-4 li{
-     list-style-type: none;
-     line-height: 30px;
-}
- .col-4 a:hover{
-     color:#717072 ;
-}
- .col-5 a{
-     text-decoration: none;
-     color: #8a898f;
-     font-size: 13px;
-     padding-left: 10px;
-}
- .col-5{
-     padding-top: 10px;
-     padding-left: 80px;
-}
- .col-5 li{
-     list-style-type: none;
-     line-height: 30px;
-}
- .col-5 a:hover{
-     color:#717072 ;
-}
- .col-6 a{
-     text-decoration: none;
-     color: #8a898f;
-     font-size: 13px;
-     padding-left: 10px;
-}
- .col-6{
-     padding-top: 10px;
-     padding-left: 110px;
-}
- .col-6 li{
-     list-style-type: none;
-     line-height: 30px;
-}
- .col-6 a:hover{
-     color:#717072 ;
-}
+
+
  
